Finance method parametrized with query mode